--- a/markDown/ch06.md
+++ b/markDown/ch06.md
@@ -19,6 +19,10 @@
       - 0 : 두 값이 같다
     - (a,b) => a-b; // 오름차순
     - (a,b) => b-a; // 내림차순
+- 배열명.slice(begin,end)
+  - 자르기
+  - [begin,end) : begin 이상 end 미만 => end는 포함 안한다
+  - `begin~end-1` 인덱스까지의 배열 데이터 잘라서 반환
 # Timer
 - 밀리초 단위 사용: millisecond
 - 1/1000 초
@@ -44,6 +48,34 @@
   - 코딩한 순서대로 동작
 
 
-# Scope
+# Scope : p276
+- JS에서 전체도 하나의 함수내에 있다고 간주
+## 함수 스코프
+- var 
+- 함수내에 어디서든 사용 가능
+## 블록 스코프
+- let, const
+- 선언된 블록 내에서만 사용 가능
+- 블록{}
+
+# 전역변수 = 소스코드 전체에서 사용가능 
+- 전역변수 = 소스코드 전채애서 사용가능
+- 지역변수 = 블록 내에서만 사용 가능
+   
 
 # Closure
+## 고차함수에서 발생
+### 외부함수
+### 내부함수
+## 내부함수에서 외부함수의 변수를 사용할 수 있는 것
+### 외부함수의 변수 : 환경
+
+
+# JS의 엘리먼트에서 CSS값 처리
+## 엘리먼트명.className
+- 해당하는 엘리먼트의 클래스네임을 읽어옴
+## 엘리먼트명.style.css속성명 = CSS값
+  - CSS의 속성명 : snake-case
+  - JS상의CSS속성명 : camelCase
+    - background-color => backgroundColor
+    - font-size => fontSize
