--- a/markDown/ch07.md
+++ b/markDown/ch07.md
@@ -2,7 +2,8 @@
 
 #  Timer를 멈추기
 ## setInterval, setTimeout, setImmediate
-## clearTimeout, clearInterval
+## clearTimeout, clearInterval, clearImmediate
+- nextTick()
 
 # 배열명.includes(값)
 - if 문: **조건절 간략화 가능**
@@ -19,3 +20,11 @@
 
 ### 등록해제를 위해 제약조건
 - 등록할 때의 이벤트명과 이벤트리스너함수가 동일해야 함
+
+# p.292~293 내용 구현후 버그
+- 멈춘 상태에서 다시 시작전에 클릭하면 버그 : 애니메이션의 속도가 빨라짐
+- 해결법
+  - 1. removeEventListener()이용
+  - 2. flag 변수 이용 : 권장되는 방법
+    - boolean
+    - true/false
